# murasame_ai_talk

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  spreadsheet_logger.py  system_prompt.py  text2Coeiroink.py  text2VoicePeak.py  text2VoiceVox.py
models/: conversation.py  conversation_data_processor.py  google_sheets.py  openai_client.py  voice_synthesizer.py
services/: chat_service.py
src/vspe_gpt/: __init__.py
static/js/: AudioManager.js  RecognitionManager.js  index.js
templates/: index.html
